# Daily-Tasks-Allocation-Automation

./: .env.example  .gitignore  README.md  email_sender.py  email_styles.py  mail_scheduler.py  main.py  pyproject.toml  scheduler.py  sheets_client.py
.github/prompts/: scheduler.prompt.md  sheets-client.prompt.md  task-allocation-email.prompt.md
